test/compile_errors/err_unreachable_after_unreachable.w
//! expect-error: unreachable code

fn main:
    unreachable("not reachable")
    print("never")
